replaced ChildNodesList by ArrayList inside Node -increase performance and cleanup code
Signed-off-by: marcel.dausend <marcel.dausend@uni-ulm.de>